ui: fix contrast on app auth screen (close #158)

--- a/app/ui/FullForm.styl
+++ b/app/ui/FullForm.styl
@@ -39,3 +39,8 @@
 
 			.btn
 				margin-top: 0
+
+.darkTheme
+	.page.fullPage
+		.fullFormContainer
+			background: rgba(0, 0, 0, 0.8)
